syntax = "proto3";
import "google/protobuf/any.proto";
package gateway;

option java_package = "com.sap.iotservices.common.protobuf.gateway";
option java_outer_classname = "MeasureProtos";

message MeasureRequest {
    string capabilityAlternateId = 1;
    string sensorAlternateId = 2;
    string sensorTypeAlternateId = 3;
    int64 timestamp = 4;
    repeated Measure measures = 5;

    message Measure {
        repeated google.protobuf.Any values = 1;
    }
}