syntax = "proto3";

package gateway;

option java_package = "com.sap.iotservices.common.protobuf.gateway";
option java_outer_classname = "MeasureRequestMessageProtos";

message MeasureRequestMessage {

    bytes message = 1;
}